refactor: remove componentes não utilizados e atualiza textos para suporte a múltiplos idiomas

--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,7 +1,7 @@
 {
   "language": "Idioma",
   "nav": {
-    "home": "Home",
+    "home": "Inicio",
     "schedule": "Programação",
     "poles": "Polos",
     "hotels": "Hotéis",
