--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,7 +7,8 @@
     "hotels": "Hotels",
     "services": "Services",
     "location": "Location",
-    "contact": "Contact"
+    "contact": "Contact",
+    "gallery": "Gallery"
   },
   "hero": {
     "title1": "SÃO JOÃO",
@@ -86,5 +87,111 @@
     "city": "Arcoverde City Hall",
     "department": "Department of Tourism, Sports and Events",
     "copyright": "© 2025 São João de Arcoverde. All rights reserved."
+  },
+  "gallery": {
+    "title1": "Our",
+    "title2": "Gallery",
+    "description": "Check out the best moments of São João de Arcoverde from recent years.",
+    "viewAll": "View All",
+    "categories": {
+      "shows": "Shows",
+      "decoracao": "Decoration",
+      "comidas": "Traditional Food",
+      "tradicoes": "Traditions",
+      "publico": "Audience",
+      "infraestrutura": "Infrastructure"
+    },
+    "filter": "Filter",
+    "allCategories": "All categories",
+    "allYears": "All years",
+    "noResults": "No images found with the selected filters.",
+    "tryDifferent": "Try using different filters."
+  },
+  "admin": {
+    "adminPanel": "Admin Panel",
+    "dashboard": "Dashboard",
+    "dashboardWelcome": "Welcome to the São João de Arcoverde admin panel.",
+    "loginTitle": "Admin Access",
+    "loginFooter": "Access restricted to festival administrators",
+    "emailLabel": "Email",
+    "emailPlaceholder": "your@email.com",
+    "passwordLabel": "Password",
+    "passwordPlaceholder": "••••••••",
+    "loginButton": "Login",
+    "requiredFields": "All required fields must be filled",
+    "invalidCredentials": "Invalid email or password",
+    "galleryManagement": "Manage Gallery",
+    "galleryDescription": "Add, edit and remove images from the festival gallery.",
+    "scheduleManagement": "Manage Schedule",
+    "scheduleDescription": "Manage the festival shows and events.",
+    "locationsManagement": "Manage Locations",
+    "locationsDescription": "Manage the festival venues and locations.",
+    "usersManagement": "Manage Users",
+    "usersDescription": "Manage system users.",
+    "siteSettings": "Site Settings",
+    "settingsDescription": "Change general site settings.",
+    "manage": "Manage",
+    "viewSite": "View Site",
+    "logout": "Logout",
+    "searchGallery": "Search gallery...",
+    "filter": "Filter",
+    "addImage": "Add Image",
+    "category": "Category",
+    "categories": "Categories",
+    "allCategories": "All categories",
+    "allYears": "All years",
+    "sortBy": "Sort by",
+    "date": "Date",
+    "title": "Title",
+    "resetFilters": "Reset filters",
+    "noImagesFound": "No images found",
+    "tryDifferentFilters": "Try using different filters or add new images to the gallery.",
+    "image": "Image",
+    "details": "Details",
+    "year": "Year",
+    "actions": "Actions",
+    "view": "View",
+    "edit": "Edit",
+    "delete": "Delete",
+    "deleteSelected": "Delete selected",
+    "selectCategory": "Select a category",
+    "description": "Description",
+    "imageUrl": "Image URL",
+    "imageUrlHelp": "Leave blank to use a placeholder image",
+    "imageUpload": "Image Upload",
+    "selectFile": "Select file",
+    "preview": "Preview",
+    "noPreview": "No preview",
+    "featured": "Feature in gallery",
+    "cancel": "Cancel",
+    "save": "Save",
+    "editImage": "Edit Image",
+    "upload": "Upload",
+    "confirmDelete": "Confirm deletion",
+    "deleteWarning": "Are you sure you want to delete this image? This action cannot be undone.",
+    "imageAdded": "Image added successfully!",
+    "imageUpdated": "Image updated successfully!",
+    "imageDeleted": "Image deleted successfully!",
+    "imagesDeleted": "Images deleted successfully!",
+    "manageCategories": "Manage Categories",
+    "addCategory": "Add Category",
+    "editCategory": "Edit Category",
+    "categoryName": "Category Name",
+    "slug": "Slug",
+    "slugHelp": "Unique identifier used in URLs",
+    "generateSlug": "Generate Slug",
+    "slugExists": "This slug is already in use",
+    "categoryAdded": "Category added successfully!",
+    "categoryUpdated": "Category updated successfully!",
+    "categoryDeleted": "Category deleted successfully!",
+    "categoryHasImages": "This category contains images and cannot be deleted",
+    "categoryImagesCount": "This category contains images in the gallery.",
+    "deleteCategoryWarning": "Are you sure you want to delete this category? This action cannot be undone.",
+    "cannotDelete": "Cannot be deleted",
+    "searchCategories": "Search categories...",
+    "noCategoriesFound": "No categories found",
+    "tryDifferentSearch": "Try using different terms or add new categories.",
+    "imagesCount": "Images",
+    "back": "Back"
   }
 }
