--- a/i18n/es.json
+++ b/i18n/es.json
@@ -7,7 +7,8 @@
     "hotels": "Hoteles",
     "services": "Servicios",
     "location": "Ubicación",
-    "contact": "Contacto"
+    "contact": "Contacto",
+    "gallery": "Galería"
   },
   "hero": {
     "title1": "SÃO JOÃO",
@@ -86,5 +87,111 @@
     "city": "Ayuntamiento de Arcoverde",
     "department": "Secretaría de Turismo, Deportes y Eventos",
     "copyright": "© 2025 São João de Arcoverde. Todos los derechos reservados."
+  },
+  "gallery": {
+    "title1": "Nuestra",
+    "title2": "Galería",
+    "description": "Mira los mejores momentos del São João de Arcoverde de los últimos años.",
+    "viewAll": "Ver Todo",
+    "categories": {
+      "shows": "Shows",
+      "decoracao": "Decoración",
+      "comidas": "Comidas Típicas",
+      "tradicoes": "Tradiciones",
+      "publico": "Público",
+      "infraestrutura": "Infraestructura"
+    },
+    "filter": "Filtrar",
+    "allCategories": "Todas las categorías",
+    "allYears": "Todos los años",
+    "noResults": "No se encontraron imágenes con los filtros seleccionados.",
+    "tryDifferent": "Intenta usar filtros diferentes."
+  },
+  "admin": {
+    "adminPanel": "Panel Administrativo",
+    "dashboard": "Panel de Control",
+    "dashboardWelcome": "Bienvenido al panel administrativo del São João de Arcoverde.",
+    "loginTitle": "Acceso Administrativo",
+    "loginFooter": "Acceso restringido a los administradores del festival",
+    "emailLabel": "Email",
+    "emailPlaceholder": "tu@email.com",
+    "passwordLabel": "Contraseña",
+    "passwordPlaceholder": "••••••••",
+    "loginButton": "Entrar",
+    "requiredFields": "Todos los campos obligatorios deben ser completados",
+    "invalidCredentials": "Email o contraseña inválidos",
+    "galleryManagement": "Administrar Galería",
+    "galleryDescription": "Añade, edita y elimina imágenes de la galería del festival.",
+    "scheduleManagement": "Administrar Programación",
+    "scheduleDescription": "Gestiona los shows y eventos del festival.",
+    "locationsManagement": "Administrar Ubicaciones",
+    "locationsDescription": "Gestiona los polos y ubicaciones del festival.",
+    "usersManagement": "Administrar Usuarios",
+    "usersDescription": "Gestiona los usuarios del sistema.",
+    "siteSettings": "Configuraciones del Sitio",
+    "settingsDescription": "Cambia las configuraciones generales del sitio.",
+    "manage": "Administrar",
+    "viewSite": "Ver Sitio",
+    "logout": "Salir",
+    "searchGallery": "Buscar en la galería...",
+    "filter": "Filtrar",
+    "addImage": "Añadir Imagen",
+    "category": "Categoría",
+    "categories": "Categorías",
+    "allCategories": "Todas las categorías",
+    "allYears": "Todos los años",
+    "sortBy": "Ordenar por",
+    "date": "Fecha",
+    "title": "Título",
+    "resetFilters": "Restablecer filtros",
+    "noImagesFound": "No se encontraron imágenes",
+    "tryDifferentFilters": "Intenta usar filtros diferentes o añade nuevas imágenes a la galería.",
+    "image": "Imagen",
+    "details": "Detalles",
+    "year": "Año",
+    "actions": "Acciones",
+    "view": "Ver",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "deleteSelected": "Eliminar seleccionados",
+    "selectCategory": "Selecciona una categoría",
+    "description": "Descripción",
+    "imageUrl": "URL de la Imagen",
+    "imageUrlHelp": "Deja en blanco para usar una imagen de marcador de posición",
+    "imageUpload": "Subir Imagen",
+    "selectFile": "Seleccionar archivo",
+    "preview": "Vista previa",
+    "noPreview": "Sin vista previa",
+    "featured": "Destacar en la galería",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "editImage": "Editar Imagen",
+    "upload": "Subir",
+    "confirmDelete": "Confirmar eliminación",
+    "deleteWarning": "¿Estás seguro de que deseas eliminar esta imagen? Esta acción no se puede deshacer.",
+    "imageAdded": "¡Imagen añadida con éxito!",
+    "imageUpdated": "¡Imagen actualizada con éxito!",
+    "imageDeleted": "¡Imagen eliminada con éxito!",
+    "imagesDeleted": "¡Imágenes eliminadas con éxito!",
+    "manageCategories": "Administrar Categorías",
+    "addCategory": "Añadir Categoría",
+    "editCategory": "Editar Categoría",
+    "categoryName": "Nombre de Categoría",
+    "slug": "Slug",
+    "slugHelp": "Identificador único usado en URLs",
+    "generateSlug": "Generar Slug",
+    "slugExists": "Este slug ya está en uso",
+    "categoryAdded": "¡Categoría añadida con éxito!",
+    "categoryUpdated": "¡Categoría actualizada con éxito!",
+    "categoryDeleted": "¡Categoría eliminada con éxito!",
+    "categoryHasImages": "Esta categoría contiene imágenes y no puede ser eliminada",
+    "categoryImagesCount": "Esta categoría contiene imágenes en la galería.",
+    "deleteCategoryWarning": "¿Estás seguro de que deseas eliminar esta categoría? Esta acción no se puede deshacer.",
+    "cannotDelete": "No se puede eliminar",
+    "searchCategories": "Buscar categorías...",
+    "noCategoriesFound": "No se encontraron categorías",
+    "tryDifferentSearch": "Intenta usar términos diferentes o añade nuevas categorías.",
+    "imagesCount": "Imágenes",
+    "back": "Volver"
   }
 }
