--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,13 +1,14 @@
 {
   "language": "Idioma",
   "nav": {
-    "home": "Inicio",
+    "home": "Home",
     "schedule": "Programação",
     "poles": "Polos",
     "hotels": "Hotéis",
     "services": "Serviços",
     "location": "Local",
-    "contact": "Contato"
+    "contact": "Contato",
+    "gallery": "Galeria"
   },
   "hero": {
     "title1": "SÃO JOÃO",
@@ -86,5 +87,111 @@
     "city": "Prefeitura de Arcoverde",
     "department": "Secretaria de Turismo, Esportes e Eventos",
     "copyright": "© 2025 São João de Arcoverde. Todos os direitos reservados."
+  },
+  "gallery": {
+    "title1": "Nossa",
+    "title2": "Galeria",
+    "description": "Confira os melhores momentos do São João de Arcoverde dos últimos anos.",
+    "viewAll": "Ver Todas",
+    "categories": {
+      "shows": "Shows",
+      "decoracao": "Decoração",
+      "comidas": "Comidas Típicas",
+      "tradicoes": "Tradições",
+      "publico": "Público",
+      "infraestrutura": "Infraestrutura"
+    },
+    "filter": "Filtrar",
+    "allCategories": "Todas as categorias",
+    "allYears": "Todos os anos",
+    "noResults": "Nenhuma imagem encontrada com os filtros selecionados.",
+    "tryDifferent": "Tente usar filtros diferentes."
+  },
+  "admin": {
+    "adminPanel": "Painel Administrativo",
+    "dashboard": "Painel de Controle",
+    "dashboardWelcome": "Bem-vindo ao painel administrativo do São João de Arcoverde.",
+    "loginTitle": "Acesso Administrativo",
+    "loginFooter": "Acesso restrito aos administradores do festival",
+    "emailLabel": "Email",
+    "emailPlaceholder": "seu@email.com",
+    "passwordLabel": "Senha",
+    "passwordPlaceholder": "••••••••",
+    "loginButton": "Entrar",
+    "requiredFields": "Todos os campos obrigatórios devem ser preenchidos",
+    "invalidCredentials": "Email ou senha inválidos",
+    "galleryManagement": "Gerenciar Galeria",
+    "galleryDescription": "Adicione, edite e remova imagens da galeria do festival.",
+    "scheduleManagement": "Gerenciar Programação",
+    "scheduleDescription": "Gerencie os shows e eventos do festival.",
+    "locationsManagement": "Gerenciar Locais",
+    "locationsDescription": "Administre os polos e locais do festival.",
+    "usersManagement": "Gerenciar Usuários",
+    "usersDescription": "Administre os usuários do sistema.",
+    "siteSettings": "Configurações do Site",
+    "settingsDescription": "Altere as configurações gerais do site.",
+    "manage": "Gerenciar",
+    "viewSite": "Ver Site",
+    "logout": "Sair",
+    "searchGallery": "Buscar na galeria...",
+    "filter": "Filtrar",
+    "addImage": "Adicionar Imagem",
+    "category": "Categoria",
+    "categories": "Categorias",
+    "allCategories": "Todas as categorias",
+    "allYears": "Todos os anos",
+    "sortBy": "Ordenar por",
+    "date": "Data",
+    "title": "Título",
+    "resetFilters": "Resetar filtros",
+    "noImagesFound": "Nenhuma imagem encontrada",
+    "tryDifferentFilters": "Tente usar filtros diferentes ou adicione novas imagens à galeria.",
+    "image": "Imagem",
+    "details": "Detalhes",
+    "year": "Ano",
+    "actions": "Ações",
+    "view": "Visualizar",
+    "edit": "Editar",
+    "delete": "Excluir",
+    "deleteSelected": "Excluir selecionados",
+    "selectCategory": "Selecione uma categoria",
+    "description": "Descrição",
+    "imageUrl": "URL da Imagem",
+    "imageUrlHelp": "Deixe em branco para usar uma imagem de placeholder",
+    "imageUpload": "Upload de Imagem",
+    "selectFile": "Selecionar arquivo",
+    "preview": "Pré-visualização",
+    "noPreview": "Sem pré-visualização",
+    "featured": "Destacar na galeria",
+    "cancel": "Cancelar",
+    "save": "Salvar",
+    "editImage": "Editar Imagem",
+    "upload": "Fazer Upload",
+    "confirmDelete": "Confirmar exclusão",
+    "deleteWarning": "Tem certeza que deseja excluir esta imagem? Esta ação não pode ser desfeita.",
+    "imageAdded": "Imagem adicionada com sucesso!",
+    "imageUpdated": "Imagem atualizada com sucesso!",
+    "imageDeleted": "Imagem excluída com sucesso!",
+    "imagesDeleted": "Imagens excluídas com sucesso!",
+    "manageCategories": "Gerenciar Categorias",
+    "addCategory": "Adicionar Categoria",
+    "editCategory": "Editar Categoria",
+    "categoryName": "Nome da Categoria",
+    "slug": "Slug",
+    "slugHelp": "Identificador único usado nas URLs",
+    "generateSlug": "Gerar Slug",
+    "slugExists": "Esta slug já está em uso",
+    "categoryAdded": "Categoria adicionada com sucesso!",
+    "categoryUpdated": "Categoria atualizada com sucesso!",
+    "categoryDeleted": "Categoria excluída com sucesso!",
+    "categoryHasImages": "Esta categoria contém imagens e não pode ser excluída",
+    "categoryImagesCount": "Esta categoria contém imagens na galeria.",
+    "deleteCategoryWarning": "Tem certeza que deseja excluir esta categoria? Esta ação não pode ser desfeita.",
+    "cannotDelete": "Não pode ser excluída",
+    "searchCategories": "Buscar categorias...",
+    "noCategoriesFound": "Nenhuma categoria encontrada",
+    "tryDifferentSearch": "Tente usar termos diferentes ou adicione novas categorias.",
+    "imagesCount": "Imagens",
+    "back": "Voltar"
   }
 }
