--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -4,7 +4,7 @@
     "home": "Home",
     "schedule": "Programação",
     "poles": "Polos",
-    "hotels": "Hotéis",
+    "hotels": "Hospedagem",
     "services": "Serviços",
     "location": "Local",
     "contact": "Contato",
